# simplyplural-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  macros.rs
src/handler/: macros.rs  mod.rs  model.rs  request.rs
src/handler/analytics/: mod.rs  model.rs
src/handler/automated_timers/: mod.rs  model.rs
src/handler/front/: mod.rs  model.rs
src/handler/members/: mod.rs  model.rs
src/handler/notes/: mod.rs  model.rs
src/handler/polls/: mod.rs  model.rs
src/handler/repeated_timers/: mod.rs  model.rs
src/handler/users/: mod.rs  model.rs
src/tests/: analytics.rs  automated_timers.rs  front.rs  members.rs  mod.rs  notes.rs  polls.rs  repeated_timers.rs  users.rs
