[package]
name = "simplyplural"
version = "0.1.0"
edition = "2024"
authors = ["Webbiii"]
description = "A simple async client for the SimplyPlural WebApi"
license = "MIT"
keywords = ["simplyplural", "apparyllis", "api", "client", "async"]
categories = ["api-bindings"]
repository = "https://github.com/Web-44/simplyplural-rs"
readme = "README.md"

[dependencies]
serde = "1.0.228"
serde_repr = "0.1.20"
paste = "1.0.15"

[dependencies.reqwest]
version = "0.12.24"
features = ["json"]

[dev-dependencies]
serial_test = "3.2.0"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros"]

[features]
default = ["users", "members", "front"]
analytics = []
automated_timers = []
front = []
members = []
notes = []
polls = []
repeated_timers = []
users = []